--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Python backend
+backend/venv/
+backend/__pycache__/
+backend/models/*
+!backend/models/.gitkeep
+*.pyc
