--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@google/genai": "^1.31.0",
     "antd": "^5.27.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
